--- a/pages/admin/admin.module.css
+++ b/pages/admin/admin.module.css
@@ -20,6 +20,7 @@
   border: 0px solid #fff;
   border-radius: 0.25em;
   padding: 0.5em 1em;
+  margin-right: 0.3em;
   font-size: 1.5em;
   font-weight: 700;
 }
